src/snapshots/csvs_convert__tests__add_different_resource_folder.snap
---
source: src/lib.rs
assertion_line: 191
expression: "merge_datapackage_json(vec![format! (\"fixtures/{datapackage1}\"), format!\n                            (\"fixtures/{datapackage2}\")]).unwrap()"
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: games
    schema:
      fields:
        - name: id
          type: number
          count: 2
        - name: title
          type: string
          count: 2
      primaryKey: _link
    path: csv/games.csv
  - profile: tabular-data-resource
    name: games2
    schema:
      fields:
        - name: id
          type: number
          count: 2
        - name: title
          type: string
          count: 2
      primaryKey: _link
    path: csv/games2.csv

