src/snapshots/csvs_convert__tests__add_different_resource_folder_games2.csv.snap
---
source: src/lib.rs
assertion_line: 310
expression: lines
---
- "id,title"
- "1,game1_add_diff_resource"
- "2,game2_add_diff_resource"

