src/snapshots/csvs_convert__tests__conflict_types_folder_games.csv.snap
---
source: src/lib.rs
assertion_line: 310
expression: lines
---
- "id,title"
- "1,game1_base"
- "2,game2_base"
- "a1,game1_type_clash"
- "a2,game2_type_clash"

