src/snapshots/csvs_convert__tests__csvs_to_sqlite_large.snap
---
source: src/lib.rs
expression: datapackage
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: data
    row_count: 83192
    schema:
      fields:
        - name: _link
          type: string
          format: string
          stats:
            min_len: 8
            max_len: 12
            min_str: 0.data.0
            max_str: 999.data.9
            min_number: ~
            max_number: ~
            count: 83192
            empty_count: 0
            estimate_unique: 82252
            sum: ~
            mean: ~
        - name: _link_daily_16
          type: integer
          format: integer
          stats:
            min_len: 1
            max_len: 4
            min_str: "0"
            max_str: "999"
            min_number: 0.0
            max_number: 4998.0
            count: 83192
            empty_count: 0
            estimate_unique: 5102
            sum: 208553143.0
            mean: 2506.8894004231174
        - name: dt
          type: integer
          format: integer
          stats:
            min_len: 10
            max_len: 10
            min_str: "1489395600"
            max_str: "1490788800"
            min_number: 1489395600.0
            max_number: 1490788800.0
            count: 83192
            empty_count: 0
            estimate_unique: 333
            sum: 123963937516800.0
            mean: 1490094450.3894606
        - name: rain
          type: number
          format: number
          stats:
            min_len: 1
            max_len: 5
            min_str: "0.2"
            max_str: "95.19"
            min_number: 0.2
            max_number: 95.19
            count: 50409
            empty_count: 32783
            estimate_unique: 2186
            sum: 206982.71999999954
            mean: 4.106066773790386
        - name: pressure
          type: number
          format: number
          stats:
            min_len: 3
            max_len: 7
            min_str: "1000"
            max_str: "999.99"
            min_number: 545.07
            max_number: 1050.13
            count: 83192
            empty_count: 0
            estimate_unique: 12531
            sum: 81331797.01000002
            mean: 977.6396409510533
        - name: humidity
          type: integer
          format: integer
          stats:
            min_len: 1
            max_len: 3
            min_str: "0"
            max_str: "99"
            min_number: 0.0
            max_number: 100.0
            count: 83192
            empty_count: 0
            estimate_unique: 93
            sum: 1152691.0
            mean: 13.855791422252139
        - name: uvi
          type: number
          format: number
          stats:
            min_len: 1
            max_len: 5
            min_str: "0.43"
            max_str: "9.99"
            min_number: 0.43
            max_number: 18.36
            count: 83192
            empty_count: 0
            estimate_unique: 1593
            sum: 456544.6999999962
            mean: 5.487843783056018
        - name: speed
          type: number
          format: number
          stats:
            min_len: 1
            max_len: 5
            min_str: "0.04"
            max_str: "9.99"
            min_number: 0.04
            max_number: 19.05
            count: 83192
            empty_count: 0
            estimate_unique: 1349
            sum: 337691.79000000074
            mean: 4.059185859217242
        - name: deg
          type: integer
          format: integer
          stats:
            min_len: 1
            max_len: 3
            min_str: "0"
            max_str: "99"
            min_number: 0.0
            max_number: 360.0
            count: 83192
            empty_count: 0
            estimate_unique: 362
            sum: 14358770.0
            mean: 172.5979661505914
        - name: clouds
          type: integer
          format: integer
          stats:
            min_len: 1
            max_len: 3
            min_str: "0"
            max_str: "99"
            min_number: 0.0
            max_number: 100.0
            count: 83192
            empty_count: 0
            estimate_unique: 102
            sum: 3061459.0
            mean: 36.7999206654486
        - name: temp_day
          type: number
          format: number
          stats:
            min_len: 3
            max_len: 6
            min_str: "246.7"
            max_str: "316.53"
            min_number: 246.7
            max_number: 316.53
            count: 83192
            empty_count: 0
            estimate_unique: 4750
            sum: 23834088.99999997
            mean: 286.4949634580245
        - name: temp_min
          type: number
          format: number
          stats:
            min_len: 3
            max_len: 6
            min_str: "239.15"
            max_str: "303"
            min_number: 239.15
            max_number: 303.0
            count: 83192
            empty_count: 0
            estimate_unique: 4667
            sum: 23280137.579999942
            mean: 279.83625324550366
        - name: temp_max
          type: number
          format: number
          stats:
            min_len: 3
            max_len: 6
            min_str: "246.7"
            max_str: "316.53"
            min_number: 246.7
            max_number: 316.53
            count: 83192
            empty_count: 0
            estimate_unique: 4752
            sum: 23873359.639999926
            mean: 286.96701173189643
        - name: temp_night
          type: number
          format: number
          stats:
            min_len: 3
            max_len: 6
            min_str: "240.31"
            max_str: "312.75"
            min_number: 240.31
            max_number: 312.75
            count: 83192
            empty_count: 0
            estimate_unique: 4550
            sum: 23409728.579999797
            mean: 281.3939871622247
        - name: temp_eve
          type: number
          format: number
          stats:
            min_len: 3
            max_len: 6
            min_str: "246.7"
            max_str: "313.01"
            min_number: 246.7
            max_number: 313.01
            count: 83192
            empty_count: 0
            estimate_unique: 4663
            sum: 23692752.860000007
            mean: 284.7960484181172
        - name: temp_morn
          type: number
          format: number
          stats:
            min_len: 3
            max_len: 6
            min_str: "239.15"
            max_str: "314.62"
            min_number: 239.15
            max_number: 314.62
            count: 83192
            empty_count: 0
            estimate_unique: 4684
            sum: 23355239.389999975
            mean: 280.73900603423374
        - name: snow
          type: number
          format: number
          stats:
            min_len: 1
            max_len: 5
            min_str: "0"
            max_str: "9.91"
            min_number: 0.0
            max_number: 46.72
            count: 13273
            empty_count: 69919
            estimate_unique: 686
            sum: 12979.64999999996
            mean: 0.9778987418066721
    path: fixtures/large/csv/data.csv
    dialect:
      delimiter: ","
      quoteChar: "\""
  - profile: tabular-data-resource
    name: daily_16
    row_count: 4999
    schema:
      fields:
        - name: _link
          type: integer
          format: integer
          stats:
            min_len: 1
            max_len: 4
            min_str: "0"
            max_str: "999"
            min_number: 0.0
            max_number: 4998.0
            count: 4999
            empty_count: 0
            estimate_unique: 5102
            sum: 12492501.0
            mean: 2499.0
        - name: time
          type: integer
          format: integer
          stats:
            min_len: 10
            max_len: 10
            min_str: "1489458708"
            max_str: "1489459697"
            min_number: 1489458708.0
            max_number: 1489459697.0
            count: 4999
            empty_count: 0
            estimate_unique: 969
            sum: 7445807130574.0
            mean: 1489459317.9783957
        - name: city_id
          type: integer
          format: integer
          stats:
            min_len: 5
            max_len: 8
            min_str: "1001642"
            max_str: "998210"
            min_number: 34915.0
            max_number: 10722858.0
            count: 4999
            empty_count: 0
            estimate_unique: 4972
            sum: 17587664942.0
            mean: 3518236.6357271452
        - name: city_name
          type: string
          format: string
          stats:
            min_len: 1
            max_len: 55
            min_str: "-"
            max_str: 괴내
            min_number: ~
            max_number: ~
            count: 4999
            empty_count: 0
            estimate_unique: 4953
            sum: ~
            mean: ~
        - name: city_country
          type: string
          format: string
          stats:
            min_len: 2
            max_len: 2
            min_str: AF
            max_str: ZW
            min_number: ~
            max_number: ~
            count: 4995
            empty_count: 4
            estimate_unique: 169
            sum: ~
            mean: ~
        - name: city_coord_lon
          type: number
          format: number
          stats:
            min_len: 1
            max_len: 11
            min_str: "-0.01667"
            max_str: "99.966667"
            min_number: -170.649994
            max_number: 179.383331
            count: 4999
            empty_count: 0
            estimate_unique: 4677
            sum: 80462.53737899997
            mean: 16.095726621124218
        - name: city_coord_lat
          type: number
          format: number
          stats:
            min_len: 1
            max_len: 10
            min_str: "-0.08333"
            max_str: "9.96667"
            min_number: -54.281109
            max_number: 70.663361
            count: 4999
            empty_count: 0
            estimate_unique: 4377
            sum: 175013.376443
            mean: 35.00967722404481
    path: fixtures/large/csv/daily_16.csv
    dialect:
      delimiter: ","
      quoteChar: "\""
  - profile: tabular-data-resource
    name: data_weather
    row_count: 83192
    schema:
      fields:
        - name: _link
          type: string
          format: string
          stats:
            min_len: 18
            max_len: 22
            min_str: 0.data.0.weather.0
            max_str: 999.data.9.weather.0
            min_number: ~
            max_number: ~
            count: 83192
            empty_count: 0
            estimate_unique: 83396
            sum: ~
            mean: ~
        - name: _link_data
          type: string
          format: string
          stats:
            min_len: 8
            max_len: 12
            min_str: 0.data.0
            max_str: 999.data.9
            min_number: ~
            max_number: ~
            count: 83192
            empty_count: 0
            estimate_unique: 82252
            sum: ~
            mean: ~
        - name: _link_daily_16
          type: integer
          format: integer
          stats:
            min_len: 1
            max_len: 4
            min_str: "0"
            max_str: "999"
            min_number: 0.0
            max_number: 4998.0
            count: 83192
            empty_count: 0
            estimate_unique: 5102
            sum: 208553143.0
            mean: 2506.8894004231174
        - name: id
          type: integer
          format: integer
          stats:
            min_len: 3
            max_len: 3
            min_str: "500"
            max_str: "804"
            min_number: 500.0
            max_number: 804.0
            count: 83192
            empty_count: 0
            estimate_unique: 12
            sum: 49929768.0
            mean: 600.1751129916338
        - name: main
          type: string
          format: string
          stats:
            min_len: 4
            max_len: 6
            min_str: Clear
            max_str: Snow
            min_number: ~
            max_number: ~
            count: 83192
            empty_count: 0
            estimate_unique: 4
            sum: ~
            mean: ~
        - name: description
          type: string
          format: string
          stats:
            min_len: 4
            max_len: 20
            min_str: broken clouds
            max_str: very heavy rain
            min_number: ~
            max_number: ~
            count: 83192
            empty_count: 0
            estimate_unique: 12
            sum: ~
            mean: ~
        - name: icon
          type: string
          format: string
          stats:
            min_len: 3
            max_len: 5
            min_str: 01d
            max_str: 13d
            min_number: ~
            max_number: ~
            count: 83192
            empty_count: 0
            estimate_unique: 15
            sum: ~
            mean: ~
    path: fixtures/large/csv/data_weather.csv
    dialect:
      delimiter: ","
      quoteChar: "\""

