src/snapshots/csvs_convert__tests__evolve_postgres-3.snap
---
source: src/lib.rs
expression: name_type
---
- string-text
- date-timestamp
- number-numeric
- boolean-bool
- string2-text
- date2-timestamp
- number2-numeric
- boolean2-bool

