src/snapshots/csvs_convert__tests__evolve_sqlite-2.snap
---
source: src/lib.rs
expression: output
---
- - a string
  - 2005-02-01
  - "42"
  - "true"
- - a string
  - 2005-02-01
  - "42"
  - "true"

